(fix): spacing in progressbar items

--- a/src/app/modules/onboarding-v2/progressbar/progressbar.component.scss
+++ b/src/app/modules/onboarding-v2/progressbar/progressbar.component.scss
@@ -47,10 +47,12 @@
       margin-left: 0;
     }
 
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    width: 72px;
-    margin: 0 25px;
+    min-width: 72px;
+    max-width: 122px;
+    margin: 0 20px;
     text-transform: uppercase;
 
     .m-onboardingProgressbarItem__number {
@@ -61,6 +63,7 @@
     .m-onboardingProgressbarItem__selector {
       width: 18px;
       height: 18px;
+      margin-top: 10px;
 
       border-radius: 100%;
       background-color: #d5d5d5;
